# Flight-Simulator

./: .gitignore  CMakeLists.txt  README.md
assets/: credits.txt
assets/Airplane/: test.mtl
include/: Airfoil.h  Airplane.h  Camera.h  EBO.h  Engine.h  GltfModel.h  Mesh.h  Model.h  TextRenderer.h  Texture.h  VAO.h  VBO.h  Wing.h  data.h  isa.h  phi.h  shaderClass.h
include/glad/: glad.h
shaders/: default.frag  default.vert  terrain.frag  terrain.vert  text.frag  text.vert
src/: EBOClass.cpp  GltfModel.cpp  Mesh.cpp  Model.cpp  Texture.cpp  VAO.cpp  VBOClass.cpp  glad.c  main.cpp  shaderClass.cpp
